--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "test": "jest __tests__"
   },
   "dependencies": {
     "@types/node": "20.3.3",
@@ -16,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "jest-environment-jsdom": "^29.6.1",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -24,9 +26,15 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.6.1",
     "classnames": "^2.3.2",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.6.1",
+    "prettier": "^2.8.8",
+    "react-test-renderer": "^18.2.0"
   }
 }
