--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.7",
+    "bottleneck": "^2.19.5",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "formik": "^2.4.5",
