--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "yup": "^1.3.3",
@@ -34,6 +36,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "babel-jest": "^29.6.1",
     "chalk": "^5.3.0",
     "classnames": "^2.3.2",
